--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<div>哈哈哈</div>
-	<script src="./src/js/index.js"></script>
+	<script src="../js/index.js"></script>
 </body>
 </html>
